--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"content="width=device-width, initial-scale=1.0">
     <title>Timeless Spice Blends</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -30,7 +30,7 @@
         }
 
         header {
-            background: linear-gradient(to right, var(--primary), var(--secondary));
+            background-color: red; /* Changed to red as per requirement */
             color: white;
             padding: 2rem 1rem;
             text-align: center;
@@ -40,12 +40,14 @@
         header h1 {
             font-size: 2.5rem;
             margin-bottom: 0.5rem;
+            font-family: cursive; /* Changed to cursive font */
         }
 
         header p {
             font-size: 1.2rem;
             max-width: 700px;
             margin: 0 auto;
+            font-family: cursive; /* Changed to cursive font */
         }
 
         .container {
